adds body-parser and static server middleware to express.

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,25 @@
 
 <head>
 <title>Imtihan</title>
+<script type='text/javascript' src='./lib/jquery.js'></script>
+<script type='text/javascript'>
 
+$(function(){
+  app(state);
+});
+
+var state = {route:"main"};
+
+var app = function(state){
+  var target = '/test/';
+  var payload = {a:"A",b:"B"};
+  $.post(target,payload,function(data,status){
+    console.log(data);
+    console.log(status);
+  });
+};
+
+</script>
 </head>
 <body></body>
 </html>
